--- a/style/style.css
+++ b/style/style.css
@@ -1,20 +1,189 @@
-body {
-    font-family: Arial, sans-serif;
+/* CSS */
+@import url(./fonts.css);
+
+body{
+    margin: 0;
+    padding: 0;
+    height: 98vh;
+}
+
+/* ? LogIn */
+
+.Svg-sc-6c3c1v-0 {
+    fill: #fff;
+}
+
+.log{
+    background: rgb(134,134,134);
+    background: linear-gradient(180deg, rgba(134,134,134,1) 0%, rgba(80,80,80,1) 6%, rgba(48,   48,48,1) 14%, rgba(34,34,34,1) 25%, rgba(21,21,21,1) 46%, rgba(0,0,0,1) 81%);
+    height: 1030px;
+}
+
+.loginUpper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.displaySettings{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.logPage {
+    border-radius: 10px;
+    width: 730px;
+    background-color: #121212;
+    margin-top: 32px;
+    height: 930px;
+    color: white;
+}
+
+.upperText{
+    font-family: Circular;
+    font-size: 35px;
+    font-weight: 1000;
+}
+
+.logo{
+    width: 40px;
+}
+
+.logCase{
+    width: 350px;
+    height: 50px;
+    padding: 5px;
+    margin-top: 15px;
+    border: 1px solid gray;
+    border-radius: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
-    margin: 0;
+    font-family: Circular;
+    color: lightgrey;
+    position: relative;
 }
 
-.container {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    width: 300px;
+.logCase:hover{
+    cursor: pointer;
+    border-color: white;
 }
+
+.caseLogo{
+    position: absolute;
+    left: 40px;
+}
+
+.forHr{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.upperHr{
+    width: 550px;
+    color: gray;
+    margin: 0 auto;
+    position: absolute;
+}
+
+.logInp{
+    background-color: #121212;
+    width: 300px;
+    border-color: gray;
+    margin-top: 2px;
+}
+
+.logBlock{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loginMiddle{
+    margin-top: -20px;
+}
+
+
+.logIn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#logBtn{
+    width: 300px;
+    background-color: #1ed760;
+    border-radius: 30px;
+    margin-top: 25px;
+    color: black;
+    font-family: Circular;
+}
+
+#logBtn:hover{
+    transform: scale(1.04);
+}
+
+.logForm{
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+.noAcc{
+    color: gray;
+}
+
+.swapToReg{
+    margin-top: 70px;
+}
+
+#swapToRegister{
+    color: white;
+    text-decoration: underline;
+    font-weight: 500;
+    cursor: pointer;
+    margin-left: 3px;
+}
+
+#swapToRegister:hover{
+    color: #1ed760;
+}
+
+.logFooter{
+    background-color: #121212;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footerP{
+    font-size: 13px;
+    color: gray;
+    margin-top: 15px;
+}
+
+.footerSpan{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .form {
     display: none;
