--- a/style/style.css
+++ b/style/style.css
@@ -1,22 +1,28 @@
 /* CSS */
 @import url(./fonts.css);
 
-body{
+html, body{
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-    height: 98vh;
 }
 
 /* ? LogIn */
 
-.Svg-sc-6c3c1v-0 {
-    fill: #fff;
-}
-
-.log{
+.logInPage{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background: rgb(134,134,134);
     background: linear-gradient(180deg, rgba(134,134,134,1) 0%, rgba(80,80,80,1) 6%, rgba(48,   48,48,1) 14%, rgba(34,34,34,1) 25%, rgba(21,21,21,1) 46%, rgba(0,0,0,1) 81%);
-    height: 1030px;
+}
+
+
+.Svg-sc-6c3c1v-0 {
+    fill: #fff;
 }
 
 .loginUpper{
@@ -95,6 +101,7 @@ body{
     width: 300px;
     border-color: gray;
     margin-top: 2px;
+    color: white;
 }
 
 .logBlock{
@@ -134,7 +141,7 @@ body{
 }
 
 .noAcc{
-    color: gray;
+    color: lightgray;
 }
 
 .swapToReg{
@@ -159,11 +166,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+    position: relative;
+    bottom: 0;
 }
 
 .footerP{
     font-size: 13px;
-    color: gray;
+    color: lightgray;
     margin-top: 15px;
 }
 
