--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,9 @@ html, body{
     height: 100%;
     margin: 0;
     padding: 0;
+    background: linear-gradient(180deg, rgba(134,134,134,1) 0%, rgba(80,80,80,1) 6%, rgba(48,   48,48,1) 14%, rgba(34,34,34,1) 25%, rgba(21,21,21,1) 46%, rgba(0,0,0,1) 81%);
+    background-repeat: no-repeat;
+    background-color: black;
 }
 
 /* ? LogIn */
@@ -16,8 +19,14 @@ html, body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: rgb(134,134,134);
-    background: linear-gradient(180deg, rgba(134,134,134,1) 0%, rgba(80,80,80,1) 6%, rgba(48,   48,48,1) 14%, rgba(34,34,34,1) 25%, rgba(21,21,21,1) 46%, rgba(0,0,0,1) 81%);
+}
+
+.logInPage2{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
