--- a/style/style.css
+++ b/style/style.css
@@ -111,6 +111,10 @@ html, body{
     border-color: gray;
     margin-top: 2px;
     color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 .logBlock{
@@ -138,6 +142,8 @@ html, body{
     margin-top: 25px;
     color: black;
     font-family: Circular;
+    padding: 10px;
+    border: 0px;
 }
 
 #logBtn:hover{
@@ -171,13 +177,10 @@ html, body{
 
 .logFooter{
     background-color: #121212;
-    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    position: relative;
-    bottom: 0;
 }
 
 .footerP{
@@ -191,62 +194,36 @@ html, body{
     cursor: pointer;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-.form {
-    display: none;
-}
-
-.form.active {
-    display: block;
-}
-
-.hidden {
-    display: none;
-}
-
-input {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-a {
-    color: #007bff;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-p {
+.noAcc, .footerP {
     text-align: center;
+}
+
+.footerP{
+    padding: 15px;
+}
+
+.regPage{
+    width: 300px;
+    height: 300px;
+    border: 1px solid white;
+}
+
+.regMain{
+    display: none;
+}
+
+
+
+
+
+.displayNone{
+    display: none;
+}
+
+.displayFlex{
+    display: flex;
+}
+
+.displayBlock{
+    display: block;
 }
