--- a/style/fonts.css
+++ b/style/fonts.css
@@ -4,3 +4,8 @@
     font-family: Circular;
     src: url(../fonts/Circular/CircularStd-Bold.otf);
 }
+
+@font-face {
+    font-family: Circular2;
+    src: url(../fonts/Circular/CircularStd-Medium.otf);
+}
