--- a/style/styleRegister.css
+++ b/style/styleRegister.css
@@ -13,6 +13,7 @@ html, body{
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
+    position: relative;
 }
 
 .bat{
@@ -171,4 +172,152 @@ html, body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.regInps{
+    position: relative;
+}
+
+#forError{
+    display: none;
+    font-size: 12px;
+    color: red;
+    letter-spacing: 0.1px;
+    font-family: Circular;
+}
+
+.alertImg{
+    width: 20px;
+    float: left;
+    clear: both;
+    margin-right: 5px;
+}
+
+.passCreate{
+    display: none;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+}
+
+.passCreate{
+    height: 400px;
+}
+
+.steps{
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    margin-left: -45px;
+}
+
+.forSq{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.forText{
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.oneStep{
+    color: gray;
+    font-size: 17px;
+    font-family: Circular;
+    letter-spacing: 0.1px;
+}
+
+.createPass{
+    color: white;
+}
+
+.semiSquare{
+    width: 15px;
+    height: 15px;
+    border: 3px;
+    border-top: 0px;
+    border-right: 0px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: lightgray;
+    transform: rotate(45deg);
+    position: relative;
+    cursor: pointer;
+}
+
+.semiSquare:hover{
+    border-color: white;
+}
+
+#passRegInp{
+    background-color: #121212;
+    width: 300px;
+    border-color: gray;
+    margin-top: 2px;
+    color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.inps{
+    margin-top: 30px;
+}
+
+.passList{
+    color: white;
+    font-family: Circular;
+    margin-top: 20px;
+}
+
+.passList p{
+    position: relative;
+}
+
+.rndI{
+    border: 1px solid lightgray;
+    width: 13px;
+    height: 13px;
+    padding: 1px;
+    border-radius: 100%;
+    position: absolute;
+    top: 6px;
+}
+
+.passListI{
+    margin-left: 25px;
+    font-size: 14px;
+}
+
+.reg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.forS{
+    width: 100%;
+    margin-top: 40px;
+}
+
+.line{
+    position: absolute;
+    width: 450px;
+    height: 1px;
+    border: 1px solid lightgray;
+    top: 30px;
+}
+
+.line2{
+    top: 30px;
+    left: -60px;
+    position: absolute;
+    width: 160px;
+    height: 1px;
+    border: 1px solid #1ed760;
 }
