--- a/style/main.css
+++ b/style/main.css
@@ -172,7 +172,8 @@ img{
     background: linear-gradient(180deg, rgba(38,38,38,1) 35%, rgba(0,0,0,1) 100%);
     height: 825px;
     border-radius: 8px;
-    
+    color: white;
+    padding: 0 24px;
 }
 
 .Cont_head{
@@ -181,11 +182,26 @@ img{
     align-items: center;
     justify-content: space-between;
 }
-.head_left{
-    padding:0 0 0 24px;
-}
 .head_right{
-    padding: 0 24px 0 0 ;
+    display: flex;
+}
+.ak{
+    background-color: rgba(0,0,0,.7);
+    border: solid 0px;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+.ak img{
+    background-color: rgba(0,0,0,.7);
+    border: solid 0px;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
 }
 .ql0zZd7giPXSnPg75NR0{
     background-color: rgba(0, 0, 0, .7);
@@ -199,6 +215,65 @@ img{
     align-items: center;
     cursor: pointer;
     position: relative;
+}
+
+.home_tab {
+    background-color:  rgb(55, 55, 55);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    border: none;
+    border-radius: 16px;
+    color: #fff;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    padding: 6px 12px;
+    text-decoration: none;
+    margin-bottom: 40px;
+}
+.home_tab:hover {
+    color: #fff;
+}
+
+.home_tab.active {
+    background-color: white;
+    color: black;
+}
+.Like{
+    background-color: #121212;
+    border-radius: 0px;
+    border: solid 0px;
+
+}
+.playlists {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 12px;
+    margin-top: 20px;
+}
+.playlist {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color:  rgba(52, 52, 55, 0.4);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    width: 100%;
+}
+.playlist img{
+   width: 85px;
+   height: 85px;
+   border-radius:  5px 0px 0px 5px ;
+}
+.playlist span {
+    margin: 0 12px;
+    font-weight: bold;
+}
+
+.Music{
+    font-family: Circular;
+    font-size: 24px;  
 }
 .Down{
     background-color: #000;
@@ -218,4 +293,41 @@ img{
   width: 16px;
   height: 16px;
   margin: 0 5px 0 0 ;
+}
+
+.for_you{
+    font-family: Circular;
+    margin-top: 60px;
+}
+.for_you span{
+    font-family: Circular;
+    margin-top: 60px;
+    font-size: 24px
+}
+.mix_day{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
+    margin-left: -9px;
+}
+.mix_1{
+    display: flex;
+    margin: 10px;
+}
+.mix_1 img{
+ width: 100%;
+ height: 65%;
+}
+.name_mix{
+    display: flex;
+    flex-direction: column;
+}
+.name_mix a{
+    text-decoration: none;
+    color: #fff;
+    margin-top: 10px;
+
+}
+.grup a{
+    color: rgb(105, 105, 105);
+    font-size: 0.875rem
 }
