--- a/style/styleRegister.css
+++ b/style/styleRegister.css
@@ -287,6 +287,9 @@ html, body{
     border-radius: 100%;
     position: absolute;
     top: 6px;
+    font-size: 7px;
+    display: flex;
+    justify-content: center;
 }
 
 .passListI{
@@ -305,19 +308,128 @@ html, body{
     margin-top: 40px;
 }
 
+.lines{
+    display: none;
+    position: relative;
+    top: 25px;
+    width: 100%;
+    height: 2px;
+    justify-content: center;
+}
+
 .line{
     position: absolute;
-    width: 450px;
+    width: 420px;
     height: 1px;
     border: 1px solid lightgray;
-    top: 30px;
+    /* top: 30px; */
 }
 
 .line2{
-    top: 30px;
-    left: -60px;
+    display: block;
+    /* top: 30px; */
+    left: -22px;
     position: absolute;
-    width: 160px;
     height: 1px;
     border: 1px solid #1ed760;
+}
+
+.about{
+    display: none;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    height: 700px;
+}
+
+.aboutP{
+    color: lightgray;
+}
+
+.aboutP span{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#userNameReg{
+    background-color: #121212;
+    width: 100%;
+    border-color: gray;
+    margin-top: 2px;
+    color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.inps2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: -10px;
+}
+
+#day{
+    background-color: #121212;
+    width: 20%;
+    border-color: gray;
+    margin-top: 2px;
+    color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: all 0.1s linear;
+}
+
+#year{
+    background-color: #121212;
+    width: 30%;
+    border-color: gray;
+    margin-top: 2px;
+    color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: all 0.1s linear;
+}
+#selector{
+    background-color: #121212;
+    width: 50%;
+    border-color: gray;
+    margin-top: 2px;
+    color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: all 0.1s linear;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#day:hover, #selector:hover, #year:hover{
+    border-color: white;
+}
+
+option:checked {
+    background-color: #dcdcdc;
+}
+
+.steps2{
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    margin-left: -85px;
+}
+
+.upInp{
+    margin-top: 30px;
+}
+
+.midInp{
+    margin-top: 30px;
 }
