--- a/style/styleRegister.css
+++ b/style/styleRegister.css
@@ -339,11 +339,17 @@ html, body{
     position: relative;
     flex-direction: column;
     align-items: center;
-    height: 700px;
+    height: 600px;
 }
 
 .aboutP{
     color: lightgray;
+}
+
+.aboutP2{
+    position: relative;
+    color: lightgray;
+    top: -15px;
 }
 
 .aboutP span{
@@ -432,4 +438,35 @@ option:checked {
 
 .midInp{
     margin-top: 30px;
+}
+
+.gender{
+    margin-top: 30px;
+}
+
+.forma{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.radio {
+    margin-bottom: 10px;
+    display: flex;
+    color: white;
+}
+
+.radio label {
+    display: block;
+    font-size: 16px;
+    line-height: 1.4;
+    cursor: pointer;
+}
+
+input[type="radio"] {
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+input[type="radio"]:disabled + label {
+    color: #ccc;
 }
