--- a/style/main.css
+++ b/style/main.css
@@ -162,7 +162,18 @@ img{
 .grid_item.i1 .Song a{
   color: white;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
+}
+.Svg-sc-ytk21e-0.dYnaPI{
+    margin-left: 20px;
+}
+.mwpJrmCgLlVkJVtWjlI1{
+    display: flex;
+}
+.mwpJrmCgLlVkJVtWjlI1 button{
+    border-radius: 0px;
+    border: solid 0px;
+    background-color: #000000;
 }
 .grid_item.i1 .Song a:hover{
     color: white;
@@ -339,4 +350,12 @@ img{
 .grup a{
     color: rgb(105, 105, 105);
     font-size: 0.875rem
+}
+.grid_item.i2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.grid_item.i2 audio{
+    width: 500px;
 }
