--- a/style/main.css
+++ b/style/main.css
@@ -135,7 +135,7 @@ img{
     margin: 8px;
 }
 .grid_item {
-    border: 1px solid rgba(29, 29, 29, 0.8);
+
     text-align: center;
     height: 100%;
     display: flex;
@@ -164,12 +164,13 @@ img{
   text-decoration: none;
   font-size: 16px;
 }
-.Svg-sc-ytk21e-0.dYnaPI{
-    margin-left: 20px;
-}
+
 .mwpJrmCgLlVkJVtWjlI1{
     display: flex;
+    width: 100%;
+    justify-content: space-evenly;
 }
+
 .mwpJrmCgLlVkJVtWjlI1 button{
     border-radius: 0px;
     border: solid 0px;
