--- a/style/styleRegister.css
+++ b/style/styleRegister.css
@@ -79,7 +79,6 @@ html, body{
 }
 
 #regNext2{
-    display: none;
     width: 300px;
     height: 45px;
     background-color: #1ed760;
@@ -92,7 +91,6 @@ html, body{
 }
 
 #regNext3{
-    display: none;
     width: 300px;
     height: 45px;
     background-color: #1ed760;
@@ -250,7 +248,7 @@ html, body{
 }
 
 .passCreate{
-    display: none;
+    /* display: none; */
     position: relative;
     flex-direction: column;
     align-items: center;
@@ -426,7 +424,7 @@ html, body{
 }
 
 .about{
-    display: none;
+    /* display: none; */
     position: relative;
     flex-direction: column;
     align-items: center;
@@ -568,9 +566,6 @@ input[type="radio"]:disabled + label {
     justify-content: center;
 }
 
-.final{
-    display: none;
-}
 .checks{
     display: flex;
     border: 1px solid #121212;
