--- a/style/main.css
+++ b/style/main.css
@@ -363,14 +363,31 @@ img{
 }
 .dropdown-menu{
     background-color: #121212;
-    
 }
+
 .dropdown-item{
     color: #fff;
+    text-align: center;
+    font-family: Circular;
+    transition: all 0.1s linear;
 }
 .Delete{
-    background-color: rgb(216, 0, 0);
+    color: red;
+}
+.Delete2{
+    color: greenyellow;
+    display: block;
 }
 .Exit{
-    background-color: rgb(0, 192, 0);
+    color: red;
+}
+
+.confirmBlock{
+    border: 1px solid white;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 700px;
+    display: none;
 }
