--- a/style/main.css
+++ b/style/main.css
@@ -282,6 +282,7 @@ img{
     border-radius: 5px;
     width: 100%;
     cursor: pointer;
+    position: relative;
 }
 .playlist img{
    width: 85px;
@@ -390,4 +391,31 @@ img{
     top: 0;
     left: 700px;
     display: none;
+}
+
+.playlist .star {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    background-color: rgb(74, 74, 73);
+    clip-path: polygon(
+        50% 0%, 
+        61% 35%, 
+        98% 35%, 
+        68% 57%, 
+        79% 91%, 
+        50% 70%, 
+        21% 91%, 
+        32% 57%, 
+        2% 35%, 
+        39% 35%
+    );
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.playlist .star.filled {
+    background-color: yellow;
 }
