--- a/style/search.css
+++ b/style/search.css
@@ -229,7 +229,26 @@ img{
     border-radius: 8px;
     
 }
-
+.Exp_prem{
+    background-color: #ffffff;
+    display: flex;
+    border-radius: 50px;
+    padding: 10px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-size: 14px;
+    width: 100%;
+    height: 32px;
+    justify-content: space-around;
+    align-items: center;
+    font-family: Circular;
+}
+.Exp{
+    margin-right: 10px;
+}
+a{
+    text-decoration: none;
+}
 .Cont_head{
     height: 64px;
     display: flex;
@@ -390,4 +409,65 @@ img{
 }
 .grid_item.i2 audio{
     width: 500px;
+}
+.dropdown-menu{
+    background-color: #000000;
+}
+
+.dropdown-item{
+    color: #fff;
+    text-align: center;
+    font-family: Circular;
+    transition: all 0.1s linear;
+}
+.Delete{
+    color: red;
+}
+.Delete2{
+    color: greenyellow;
+    display: block;
+}
+.Exit{
+    color: red;
+}
+
+.confirmBlock{
+    border: 1px solid white;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 700px;
+    display: none;
+}
+.ak{
+    background-color: rgba(0,0,0,.7);
+    border: solid 0px;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+.ak img{
+    background-color: rgba(0,0,0,.7);
+    border: solid 0px;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+}
+.ql0zZd7giPXSnPg75NR0{
+    background-color: rgba(0, 0, 0, .7);
+    border: none;
+    border-radius: 50%;
+    color: #fff;
+    display: inline-flex;
+    height: 32px;
+    width: 32px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
 }
