--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,10 @@ html, body{
     justify-content: space-between;
 }
 
+.logIn{
+    position: relative;
+}
+
 .logInPage2{
     width: 100%;
     height: 100%;
@@ -231,6 +235,32 @@ html, body{
     margin-right: 5px;
 }
 
+#hideAndOpen{
+    position: absolute;
+    bottom: 86px;
+    right: 210px;
+    color: white;
+    /* background-image: url(../img/hide.png); */
+    /* background-image: url(../img/open.png); */
+    background-size: 100%;
+    background-position: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    filter: drop-shadow(0px 0px 1px white);
+}
+
+#hideAndOpen:hover{
+    transform: scale(105%);
+}
+
+.hideEye{
+    background-image: url(../img/hide.png);
+}
+
+.openEye{
+    background-image: url(../img/open.png);
+}
 
 .displayNone{
     display: none;
