--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,7 @@ html, body{
     background-color: #000000;
     width: 100%;
     height: 100%;
+    user-select: none;
 }
 p{
     margin: 0;
@@ -356,8 +357,8 @@ a{
     margin: 10px;
 }
 .mix_1 img{
- width: 100%;
- height: 65%;
+    width: 200px;
+    height: 200px;
 }
 .name_mix{
     display: flex;
